[package]
name = "actix-web-api-jwt-authentication"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "actix-web-api-jwt-authentication"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-utils = "3.0.0"
actix-web = "4.0.1"
actix-web-httpauth = "0.6.0"
